<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scheulder_activity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SchedulerActivity">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/start_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/start_date"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/start_date_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/start_date_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:text="Button"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_date_label"
            app:layout_constraintTop_toTopOf="parent" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/end_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/end_date"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/end_date_button"
            app:layout_constraintEnd_toEndOf="@+id/start_date_label"
            app:layout_constraintStart_toStartOf="@+id/start_date_label"
            app:layout_constraintTop_toTopOf="@+id/end_date_button" />

        <Button
            android:id="@+id/end_date_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:text="Button"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_date_label"
            app:layout_constraintTop_toBottomOf="@+id/start_date_button" />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/start_book_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="top"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/start_book_label"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:text="@string/start_book_label" />

        <Button
            android:id="@+id/start_book_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:text="Button"
            android:textAllCaps="false" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/end_book_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/end_book_label"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:text="@string/end_book_label" />

        <Button
            android:id="@+id/end_book_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:text="Button"
            android:textAllCaps="false" />
    </TableRow>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</TableLayout>